fixed resume spacing

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ p {
     margin: 50px;
     height: 100%;
     width: 100%;
+    justify-content: space-between;
 }
 #content {
     display: flex;
@@ -67,8 +68,8 @@ p {
 
 
 #resume {
-    position: center;
-    width: 100%;
+    width: 50%;
+    justify-content: center;
 }
 #centerbox {
     display: grid;
